# pendulum

./: .gitignore  CMakeLists.txt  README.md  pendulum_physics_engine_plan.md
docs/: physics.md  programming.md
docs/superpowers/plans/: 2026-04-26-pendulum-phase1-n1-engine.md
src/: engine.hpp
src/api/: wasm.cpp
src/core/: eom.hpp  pendulum_n1.hpp  types.hpp
src/integrators/: dopri5.hpp
tests/: CMakeLists.txt  test_dopri5.cpp  test_engine_n1.cpp  test_engine_n2.cpp  test_engine_n3.cpp  test_pendulum_n1.cpp  test_smoke.cpp  test_types.cpp  test_validation_n1.cpp
web/: index.html  package-lock.json
web/public/wasm/: pendulum.js  pendulum.wasm
web/src/: App.css  App.tsx  index.css
web/src/components/: Controls.tsx  EnergyPlot.tsx  InfoPanel.tsx  PendulumCanvas.tsx  PhaseSpacePlot.tsx
web/src/engine/: wasm-bridge.ts
